# ASHGF

./: .gitignore  .rules  AGENTS.md  ASHGF_PROPOSAL.md  Cargo.toml  IMPLEMENTATION_PROGRESS.md  PORTING.md  PORTING_RUST.md  README.md  REPORT.md  TODO.md  analyze_final.py  analyze_v4.py  analyze_v7.py  analyze_variants.py  fix4.py  notebook_profiles.ipynb  pyproject.toml  requirements.txt  rl_analysis.ipynb
.github/workflows/: test.yml
ashgf/: __init__.py  __main__.py  benchmark.py
ashgf/algorithms/: __init__.py  asebo.py  asgf.py  asgf_2a.py  asgf_2f.py  asgf_2g.py  asgf_2h.py  asgf_2i.py  asgf_2j.py  asgf_2p.py  asgf_2s.py  asgf_2sa.py  asgf_2saw.py  asgf_2sd.py  asgf_2sg.py  asgf_2sl.py  asgf_2sla.py  asgf_2slb.py  asgf_2sld.py  asgf_2slp.py  asgf_2slr.py  asgf_2sls.py  asgf_2slt.py  asgf_2slv.py  asgf_2slv2.py  asgf_2slv2p.py  asgf_2slv2ps.py  asgf_2slv2s.py  asgf_2slvc.py  asgf_2slvk.py  asgf_2slvm.py  asgf_2slvp.py  asgf_2slvps.py  asgf_2slvs.py  asgf_2sm.py  asgf_2sma.py  asgf_2smc.py  asgf_2smi.py  asgf_2sn.py  asgf_2sq.py  (+70 more)
ashgf/cli/: __init__.py  run.py
ashgf/functions/: __init__.py  benchmark.py  classic.py  extended.py  rl.py
ashgf/gradient/: __init__.py  estimators.py  sampling.py
ashgf/utils/: __init__.py  logging.py
results_compare/dim_10/csv/: ASGF-2X_almost_perturbed_quadratic.csv  ASGF-2X_bdqrtic.csv  ASGF-2X_biggsb1.csv  ASGF-2X_diagonal_9.csv  ASGF-2X_extended_denschnb.csv  ASGF-2X_extended_hiebert.csv  ASGF-2X_extended_psc1.csv  ASGF-2X_extended_quadratic_penalty_qp1.csv  ASGF-2X_hager.csv  ASGF-2X_mccormck.csv  ASGF-2X_nondquar.csv  ASGF-2X_perturbed_quadratic.csv  ASGF-2X_perturbed_quadratic_diagonal.csv  ASGF-2X_quartc.csv  ASGF-2X_raydan_1.csv  ASGF_arwhead.csv  ASGF_diagonal_4.csv  ASGF_engval1.csv  ASGF_extended_bd1.csv  ASGF_extended_maratos.csv  ASGF_extended_quadratic_penalty_qp1.csv  ASGF_extended_white_and_holst.csv  ASGF_sinquad.csv  (+4 more)
results_final/: ASGF-2X_cosine.csv  ASGF-2X_diagonal_2.csv  ASGF-2X_diagonal_7.csv  ASGF-2X_eg2.csv  ASGF-2X_extended_maratos.csv  ASGF-2X_extended_penalty.csv  ASGF-2X_extended_quadratic_penalty_qp2.csv  ASGF-2X_extended_rosenbrock.csv  ASGF-2X_generalized_quartic.csv  ASGF-2X_generalized_white_and_holst.csv  ASGF-2X_griewank.csv  ASGF-2X_indef.csv  ASGF-2X_nonscomp.csv  ASGF-2X_quadratic_qf1.csv  ASGF-2X_quadratic_qf2.csv  ASGF-2X_rastrigin.csv  ASGF-2X_raydan_2.csv  ASGF-2X_sine.csv  ASGF-2X_sinquad.csv  ASGF-2X_sphere.csv  ASGF-C_ackley.csv  ASGF-C_almost_perturbed_quadratic.csv  ASGF-C_bdexp.csv  ASGF-C_cosine.csv  ASGF-C_diagonal_1.csv  ASGF-C_diagonal_2.csv  ASGF-C_diagonal_3.csv  ASGF-C_diagonal_4.csv  ASGF-C_diagonal_5.csv  ASGF-C_diagonal_7.csv  ASGF-C_diagonal_8.csv  ASGF-C_diagonal_9.csv  ASGF-C_dixon3dq.csv  ASGF-C_dqdrtic.csv  ASGF-C_edensch.csv  ASGF-C_engval1.csv  ASGF-C_extended_cliff.csv  ASGF-C_extended_denschnb.csv  ASGF-C_extended_feudenstein_and_roth.csv  ASGF-C_extended_hiebert.csv  (+420 more)
results_variants/: ASGF-AQ_ackley.csv  ASGF-AQ_almost_perturbed_quadratic.csv  ASGF-AQ_arwhead.csv  ASGF-AQ_bdexp.csv  ASGF-AQ_bdqrtic.csv  ASGF-AQ_broyden_tridiagonal.csv  ASGF-AQ_cosine.csv  ASGF-AQ_cube.csv  ASGF-AQ_diagonal_1.csv  ASGF-AQ_diagonal_2.csv  ASGF-AQ_diagonal_3.csv  ASGF-AQ_diagonal_4.csv  ASGF-AQ_diagonal_5.csv  ASGF-AQ_diagonal_7.csv  ASGF-AQ_diagonal_8.csv  ASGF-AQ_diagonal_9.csv  ASGF-AQ_dixon3dq.csv  ASGF-AQ_dqdrtic.csv  ASGF-AQ_edensch.csv  ASGF-AQ_eg2.csv  ASGF-AQ_engval1.csv  ASGF-AQ_extended_baele.csv  ASGF-AQ_extended_bd1.csv  ASGF-AQ_extended_cliff.csv  ASGF-AQ_extended_denschnb.csv  ASGF-AQ_extended_denschnf.csv  ASGF-AQ_extended_feudenstein_and_roth.csv  ASGF-AQ_extended_hiebert.csv  ASGF-AQ_extended_himmelblau.csv  ASGF-AQ_extended_maratos.csv  ASGF-AQ_extended_penalty.csv  ASGF-AQ_extended_quadratic_exponential_ep1.csv  ASGF-AQ_extended_quadratic_penalty_qp1.csv  ASGF-AQ_extended_quadratic_penalty_qp2.csv  ASGF-AQ_extended_rosenbrock.csv  ASGF-AQ_extended_tridiagonal_1.csv  ASGF-AQ_extended_tridiagonal_2.csv  ASGF-AQ_extended_trigonometric.csv  ASGF-AQ_extended_white_and_holst.csv  ASGF-AQ_fh3.csv  (+313 more)
scripts/analysis/: analyze_rust_bench.py  analyze_v5.py  analyze_v8.py  analyze_v9.py
src/: RL_problems.py  ashgf.py  functions.txt  lib.rs  main.rs  profiles.py  sges old.py  sges.py  stat_plots.py  stats.ipynb  testing_stuffs.py
src/algorithms/: asebo.rs  asgf.rs  asgf_2s.rs  asgf_2sw.rs  ashgf.rs  ashgf_ng.rs  ashgf_s.rs  base.rs  gd.rs  mod.rs  sges.rs
src/benchmark/: mod.rs  plot.rs  report.rs  runner.rs
src/cli/: args.rs
src/functions/: __init__.py  benchmark.rs  benchmarks.py  classic.rs  extended.rs  mod.rs
src/gradient/: estimators.rs  mod.rs  sampling.rs
src/optimizers/: __init__.py  analysis.md  asebo.py  asgf.py  ashgf.py  base.py  gd.py  sges.py
src/utils/: mod.rs  parallel.rs  rng.rs
src_old/: asebo.py  asgf.py  functions.py  gd.py  notebook_profiles.ipynb  profiles.py  rl_analysis.ipynb  stat_plots.py  testing_stuffs.py
src_rust/: Cargo.toml  test_orthogonal.rs
src_rust/benches/: benchmarks.rs
src_rust/src/: lib.rs  main.rs
src_rust/src/functions/: benchmarks.rs  mod.rs
src_rust/src/optimizers/: asebo.rs  asgf.rs  ashgf.rs  base.rs  gd.rs  mod.rs  sges.rs
src_rust/src/plots/: io.rs  mod.rs  render.rs  stats.rs
src_rust/src/profiles/: experiment.rs  io.rs  mod.rs
src_rust/tests/: integration_tests.rs
tests/: __init__.py  conftest.py  test_algorithms.py  test_functions.py  test_gradient_estimator.py  test_sampling.py  test_variants.py
tests/regression/: __init__.py  test_regression.py
thesis/: Dissertate.cls  README.md  dissertation.aux  dissertation.bbl  dissertation.blg  dissertation.lof  dissertation.lot  dissertation.out  dissertation.tex  dissertation.toc  references.bib
thesis/chapters/: conclusion.aux  conclusion.tex  introduction.aux  introduction.tex  numericalexperiments.aux  numericalexperiments.tex  stateoftheartalgorithms.aux  stateoftheartalgorithms.tex  thealgorithm - Copia.tex  thealgorithm.aux  thealgorithm.tex
thesis/frontmatter/: abbr.tex  abstract.tex  dedication.tex  personalize.tex  thanks.tex
(+2873 files in other folders)
