[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
rl = [
    "gymnasium>=0.29",
]

[project]
name = "ashgf"
version = "0.2.0"
description = "Adaptive Stochastic Historical Gradient-Free Optimization"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "ASHGF Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "pandas>=1.3",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
rl = [
    "gymnasium>=0.29",
]
all = [
    "ashgf[dev,rl]",
]

[project.scripts]
ashgf = "ashgf.cli.run:main"

[tool.setuptools.packages.find]
include = ["ashgf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "rl: marks tests that require gymnasium",
]

[tool.coverage.run]
source = ["ashgf"]
omit = ["ashgf/cli/*", "ashgf/utils/*"]
