[package]
name = "ashgf"
version = "0.1.0"
edition = "2021"
authors = ["ASHGF Team"]
description = "Rust implementation of gradient-free optimization algorithms"

[dependencies]
ndarray = "0.17"
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
rayon = { version = "1.10", optional = true }

[features]
parallel = ["rayon"]

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.14"

[[bench]]
name = "benchmarks"
harness = false

[lib]
name = "ashgf"
path = "src/lib.rs"

[[test]]
name = "integration_tests"
