[package]
name = "ashgf"
version = "0.1.0"
edition = "2021"
authors = ["ASHGF Team"]
description = "Rust implementation of gradient-free optimization algorithms"

[dependencies]
ndarray = "0.17"
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
rayon = { version = "1.10", optional = true }
parquet = { version = "57" }
arrow = { version = "57" }
clap = { version = "4.5", features = ["derive"] }
dirs = { version = "5", optional = true }
anyhow = "1"
plotters = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
parallel = ["rayon"]
plotting = ["plotters", "dirs"]

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.14"

[[bench]]
name = "benchmarks"
harness = false

[lib]
name = "ashgf"
path = "src/lib.rs"

[[bin]]
name = "profiles"
path = "src/bin/profiles.rs"

[[bin]]
name = "plots"
path = "src/bin/plots.rs"
required-features = ["plotting"]

[[test]]
name = "integration_tests"
